[package]
name = "simperby-cli"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
eyre = "0.6.8"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
simperby-core = { version = "0.1.0", path = "../core" }
simperby-repository = { version = "0.1.0", path = "../repository" }
simperby = { version = "0.1.0", path = "../simperby" }
thiserror = "1.0.32"
semver = "1.0.0"
clap = { version = "=4.1.8", features = ["derive"] }
rand = "0.8.5"
hex = "0.4.3"
env_logger = "0.10.0"
color-eyre = "0.6.2"
simperby-test-suite = { path = "../test-suite" }
serde_json = { version = "1.0", features = ["preserve_order"] }
