[package]
name = "simperby-common"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.3.1"
ed25519 = "1.5.2"
ed25519-dalek = "1.0.1"
thiserror = "1.0.32"
rand = { version = "0.7" }
serde_json = "1.0"
hex = "0.4.3"

[features]
full = []
