[package]
name = "simperby-common"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.6"
thiserror = "1.0.32"
rand = { version = "0.7" }
serde_json = "1.0"
hex = "0.4.3"
secp256k1 = { version = "0.24.2", features = ["recovery", "rand-std"] }

[dev-dependencies]
simperby-test-suite = { path = "../test-suite" }

[features]
full = []
