[package]
name = "simperby-consensus"
version = "0.1.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
license = "MIT"
description = "Simperby consensus module"
repository = "https://github.com/postech-dao/simperby"
keywords = ["blockchain", "consensus", "protocol", "crypto", "network"]
categories = ["cryptography", "finance"]
include = ["src/**/*.rs"]

[dependencies]
eyre = "0.6.8"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
thiserror = "1.0.32"
simperby-core = { version = "0.1.0", path = "../core" }
simperby-network = { version = "0.1.0", path = "../network" }
vetomint = { version = "0.1.0", path = "../vetomint" }
parking_lot = "0.12.1"
hex = "0.4.3"

[dev-dependencies]
simperby-test-suite = { path = "../test-suite" }
itertools = "0.10.5"
