[package]
name = "simperby-core"
version = "0.1.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
license = "MIT"
description = "Simperby core library"
repository = "https://github.com/postech-dao/simperby"
keywords = ["blockchain", "consensus", "protocol", "crypto", "network"]
categories = ["cryptography", "finance"]
include = ["src/**/*.rs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.6"
thiserror = "1.0.32"
rand = { version = "0.7" }
serde_json = { version = "1.0", features = ["preserve_order"] }
hex = "0.4.3"
secp256k1 = { version = "0.24.2", features = ["recovery", "rand-std"] }
bincode = "1.3.3"
semver = "1.0.0"

[dev-dependencies]
simperby-test-suite = { path = "../test-suite" }

[features]
full = []
