[package]
name = "simperby-merkle-tree"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
simperby-kv-storage = { version = "0.0.0", path = "../kv-storage" }
thiserror = "1.0.32"
simperby-common = { version = "0.0.0", path = "../common" }
