[package]
name = "simperby-network"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
simperby-common = { version = "0.0.0", path = "../common" }
# libp2p = { version = "0.50.0", features = ["tcp", "tokio", "yamux", "noise", "kad", "identify", "macros"], optional = true }
thiserror = "1.0"
serde-tc = "0.4.1"
reqwest = "0.11"
fs2 = { version = "0.4.3"}
tokio-stream = { version = "0.1.11", features = ["fs"] }
ip_rfc = "0.1.0"

[dev-dependencies]
rand = "0.8.5"
port_scanner = "0.1.5"
env_logger = "0.10.0"

[features]
full = []
