[package]
name = "simperby-repostiory"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
thiserror = "1.0.32"
git2 = "0.15.0"
simperby-common = { version = "0.0.0", path = "../common" }
simperby-network = { version = "0.0.0", path = "../network" }
