[package]
name = "simperby-repository"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
thiserror = "1.0.32"
git2 = "0.15.0"
simperby-common = { version = "0.0.0", path = "../common" }
simperby-network = { version = "0.0.0", path = "../network" }
tempfile = "3"
url = "2.0"
regex = "1.7.0"

[dev-dependencies]
rand = "0.8.5"
path-slash = "0.2.1"
simperby-test-suite = { path = "../test-suite" }

[dependencies.libgit2-sys]
version = "0.14.0"
