[package]
name = "simperby-repository"
version = "0.1.1"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
license = "MIT"
description = "Simperby repository module"
repository = "https://github.com/postech-dao/simperby"
keywords = ["blockchain", "consensus", "protocol", "crypto", "network"]
categories = ["cryptography", "finance"]
include = ["src/**/*.rs", "**/*.sh"]

[dependencies]
eyre = "0.6.8"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
thiserror = "1.0.32"
git2 = "0.15.0"
simperby-core = { version = "0.1.0", path = "../core" }
simperby-network = { version = "0.1.0", path = "../network" }
tempfile = "3"
url = "2.0"
regex = "1.7.0"
path-slash = "0.2.1"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
path-slash = "0.2.1"
simperby-test-suite = { path = "../test-suite" }
