[package]
name = "simperby-test-suite"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4"
simperby-node = { path = "../node" }
rand = "0.8"
path-slash = "0.2.1"
tempfile = "3"
once_cell = "1.16.0"
