[package]
name = "simperby-test-suite"
version = "0.0.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"

[dependencies]
eyre = "0.6.8"
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
futures = "0.3"
log = "0.4"
simperby-node = { path = "../node" }
rand = "0.8"
path-slash = "0.2.1"
tempfile = "3"
once_cell = "1.16.0"
env_logger = "0.10.0"
color-eyre = "0.6.2"
parking_lot = "0.12.1"
