[package]
name = "vetomint"
version = "0.1.0"
authors = ["PDAO Team <hello@postech-dao.xyz>"]
edition = "2021"
license = "MIT"
description = "Simperby Vetomint consensus algorithm"
repository = "https://github.com/postech-dao/simperby"
keywords = ["blockchain", "consensus", "protocol", "crypto", "network"]
categories = ["cryptography", "finance"]
include = ["src/**/*.rs"]

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0.31"
